[package]
name = "aslet"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.4.5", features = [
    "experimental-threads",
    "register-docs",
] }
rusqlite = { version = "0.37.0", features = ["bundled", "backup"] }
crossbeam = "0.8.4"
slab = "0.4.11"
